--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,13 @@
         <version>2.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.1.3</version>
+    </dependency>
+
+
 </dependencies>
 </project>
